# atlasent-sdk

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_V1_1.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  PLAN.md  README.md  RELEASE_NOTES.md  RELEASING.md  ROADMAP.md  V2_ROLLOUT.md  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cleanup-stale-branches.yml  codeql.yml  contract-ci.yml  dependency-review.yml  enforce-ci.yml  go-ci.yml  integration.yml  (+17 more)
atlasent/: __init__.py  _version.py  async_client.py  authorize.py  cache.py  client.py  config.py  exceptions.py  models.py
contract/: APPROVAL_DENY_REASONS.md  ENFORCE_PACK.md  README.md  SDK_COMPATIBILITY.md  SIM_SCENARIOS.md  SIM_SIGNOFF.md  drift_detector.py  openapi-v2.yaml  openapi.yaml  requirements.txt
docs/: ATLASENT_ACTION_WIRING.md  B5_HANDOFF.md  CI_GAPS_AUDIT.md  CONTROL-SYSTEM-ROADMAP.md  PUBLISH_READINESS.md  V1_PLAN.md  V2_ARCHITECTURE.md  V2_MIGRATION.md  V2_PILLAR8_BULK_REVOKE.md  V2_PILLAR9_PROOF_SYSTEM.md  V2_PLAN.md  V2_STATUS.md  YC_DEMO_PLAN.md
examples/: basic_authorize.py  batch_evaluation.py  clinical_data_agent.py  fastapi_integration.py  flask_integration.py
go/: README.md  atlasent.go  atlasent_test.go  client.go  client_test.go  doc.go  errors.go  go.mod  protect.go  protect_internal_test.go  protect_test.go  retry.go  retry_test.go  types.go  with_permit.go  with_permit_test.go
migrations/: 001_financial_action_model.sql  002_liability_attribution.sql  003_economic_risk.sql  004_financial_quorum.sql  005_budgetary_governance.sql  006_autonomous_financial.sql  007_incentive_alignment.sql  008_economic_evidence.sql  009_dispute_reversal.sql
python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
python/.github/workflows/: ci.yml
python/atlasent/: __init__.py  _response_adapter.py  _version.py  aio.py  approval_artifact.py  async_client.py  audit.py  audit_bundle.py  authorize.py  behavior.py  cache.py  canonical.py  client.py  config.py  exceptions.py  guard.py  logging.py  models.py  require_permit.py  sso.py  testing.py  tracing.py  verify_export.py  with_permit.py
python/atlasent_enforce/: README.md  pyproject.toml
python/atlasent_enforce/atlasent_enforce/: __init__.py  _enforce.py  errors.py  types.py
python/atlasent_enforce/tests/: test_coverage.py  test_reason_code.py  test_smoke.py
python/atlasent_enforce/tests/sim/: harness.py  test_sim_01.py  test_sim_02.py  test_sim_03.py  test_sim_04.py  test_sim_05.py  test_sim_06.py  test_sim_07.py  test_sim_08.py  test_sim_09.py  test_sim_10.py  test_sim_11.py  test_sim_12.py
python/atlasent_langchain/: pyproject.toml
python/atlasent_langchain/atlasent_langchain/: __init__.py  guard.py
python/atlasent_langchain/tests/: test_guard.py
python/atlasent_llamaindex/: pyproject.toml
python/atlasent_llamaindex/atlasent_llamaindex/: __init__.py  guard.py
python/atlasent_llamaindex/tests/: test_guard.py
python/atlasent_otel_preview/: README.md  pyproject.toml
python/atlasent_otel_preview/atlasent_otel_preview/: __init__.py  with_otel.py
python/atlasent_otel_preview/tests/: test_with_otel.py
python/atlasent_sentry_preview/: README.md  pyproject.toml
python/atlasent_sentry_preview/atlasent_sentry_preview/: __init__.py  with_sentry.py
python/atlasent_sentry_preview/tests/: test_with_sentry.py
python/atlasent_temporal_preview/: README.md  pyproject.toml
python/atlasent_temporal_preview/atlasent_temporal_preview/: __init__.py  atlasent_activity.py  bulk_revoke_activity.py  workflow_signals.py
python/atlasent_temporal_preview/tests/: test_atlasent_activity.py  test_workflow_signals.py
python/atlasent_v2_alpha/: README.md  pyproject.toml
python/atlasent_v2_alpha/atlasent_v2_alpha/: __init__.py  canonicalize.py  client.py  hash.py  sse.py  types.py
python/atlasent_v2_alpha/tests/: test_bulk_revoke.py  test_canonicalize.py  test_client.py  test_contract_vectors.py  test_evaluate_batch.py  test_hash.py  test_sse.py  test_subscribe_decisions.py  test_types.py
python/atlasent_v2_preview/: README.md  pyproject.toml
python/atlasent_v2_preview/atlasent_v2_preview/: __init__.py  batch.py  canonicalize.py  decision_event.py  evaluate_batch_polyfill.py  parse_sse.py  types.py  verify_proof.py
python/atlasent_v2_preview/atlasent_v2_preview/graphql/: __init__.py  client.py  types.py
python/atlasent_v2_preview/examples/: 01_canonicalize_and_hash.py  02_verify_shared_fixtures.py  README.md
python/atlasent_v2_preview/tests/: test_batch.py  test_canonicalize.py  test_evaluate_batch_polyfill.py  test_fixtures.py  test_graphql.py  test_hash.py  test_parse_sse.py  test_types.py  test_verify_proof.py
python/examples/: basic_protect.py  batch_evaluation.py  clinical_data_agent.py  export_audit.py  fastapi_integration.py  flask_integration.py  floqast_close_authorization.py  gxp_change_control.py  pharma_batch_release.py  protect.py  rate_limit_backoff.py  verify_bundle.py
python/tests/: test_approval_artifact.py  test_async_client.py  test_audit.py  test_audit_bundle.py  test_authorize.py  test_authorize_api.py  test_behavior.py  test_cache.py  test_client.py  test_contract_vectors.py  test_deny_outcome.py  test_exceptions.py  test_guard.py  test_logging.py  test_models.py  test_protect.py  test_require_permit.py  test_response_adapter.py  test_sso.py  test_stream.py  test_testing_module.py  test_verify_export.py  test_with_permit.py
python/tests/integration/: test_smoke.py
scripts/: enforce-no-bypass.mjs  enforce_no_bypass.py
src/: async-client.ts
tests/: test_async_client.py  test_authorize.py  test_cache.py  test_client.py  test_exceptions.py  test_guard.py  test_models.py
typescript/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.examples.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.integration.config.ts
verify/: README.md
verify/python/: README.md  pyproject.toml
verify/python/atlasent_verify/: __init__.py
(+241 files in other folders)
