[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasent"
dynamic = ["version"]
description = "Python SDK for the AtlaSent authorization API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AtlaSent Systems Inc.", email = "sdk@atlasent.io" },
]
keywords = ["atlasent", "authorization", "ai", "agents", "gxp", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk-python"
Documentation = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk-python#readme"
Repository = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk-python"
Issues = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk-python/issues"

[tool.setuptools.dynamic]
version = {attr = "atlasent._version.__version__"}

[tool.setuptools.package-data]
atlasent = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N818"]  # AtlaSentDenied is intentionally not suffixed "Error"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
