[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "atlasent"
version = "1.1.0"
description = "AtlaSent Python SDK"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 88
