[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasent"
dynamic = ["version"]
description = "Python SDK for the AtlaSent authorization API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AtlaSent Systems Inc.", email = "sdk@atlasent.io" },
]
keywords = ["atlasent", "authorization", "ai", "agents", "gxp", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
audit = [
    "cryptography>=41.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk"
Documentation = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk#readme"
Repository = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk"
Issues = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk/issues"

[tool.setuptools.dynamic]
version = {attr = "atlasent._version.__version__"}

[tool.setuptools.package-data]
atlasent = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N818"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits the real AtlaSent API (skipped unless ATLASENT_API_KEY is set)",
]

[tool.coverage.run]
source = ["atlasent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
# Floor set to current-minus-small-margin so CI catches regressions.
# V1 target per docs/V1_PLAN.md is 95 — ratchet up as tests are added
# for async_client error paths and the guard decorators.
fail_under = 88
show_missing = true
