[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasent"
dynamic = ["version"]
description = "Python SDK for the AtlaSent authorization API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AtlaSent Systems Inc.", email = "sdk@atlasent.io" },
]
keywords = ["atlasent", "authorization", "ai", "agents", "gxp", "compliance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
verify = [
    "cryptography>=41.0.0",
]
dev = [
    "cryptography>=41.0.0",
    "cffi>=1.16.0",
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk"
Documentation = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk#readme"
Repository = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk"
Issues = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk/issues"

[tool.setuptools.dynamic]
version = {attr = "atlasent._version.__version__"}

[tool.setuptools.packages.find]
# Sibling top-level dirs (atlasent_v2_alpha, atlasent_enforce, atlasent_langchain,
# atlasent_llamaindex, etc.) are independent distributions with their own
# pyproject.toml. Without this include filter, setuptools' flat-layout
# auto-discovery refuses to build.
include = ["atlasent*"]
exclude = [
    "atlasent_enforce*",
    "atlasent_langchain*",
    "atlasent_llamaindex*",
    "atlasent_v2_alpha*",
    "atlasent_v2_preview*",
    "atlasent_otel_preview*",
    "atlasent_sentry_preview*",
    "atlasent_temporal_preview*",
]

[tool.setuptools.package-data]
atlasent = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N818"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits the real AtlaSent API (skipped unless ATLASENT_API_KEY is set)",
]

[tool.coverage.run]
source = ["atlasent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
# Floor set to current-minus-small-margin so CI catches regressions.
# V1 target per docs/V1_PLAN.md is 95 — now met (97%+). Ratchet up as
# additional error paths are covered; kept at 95 for regression-catch
# headroom rather than pinning to the current exact number.
fail_under = 95
show_missing = true
