[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasent-enforce"
version = "0.0.0"
description = "AtlaSent Enforce Pack — non-bypassable execution wrapper around the v1 SDK."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AtlaSent Systems Inc.", email = "sdk@atlasent.io" },
]
keywords = ["atlasent", "enforce", "authorization", "verify-permit", "fail-closed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk"
Repository = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk"

[tool.setuptools.packages.find]
include = ["atlasent_enforce*"]

[tool.setuptools.package-data]
atlasent_enforce = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["atlasent_enforce"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
