[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasent-langchain"
version = "1.5.1"
description = "AtlaSent authorization wrapper for LangChain tools — authorize every tool call before execution"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AtlaSent Systems Inc.", email = "sdk@atlasent.io" },
]
keywords = ["atlasent", "langchain", "authorization", "middleware", "agent-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "atlasent>=1.5.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk"
Repository = "https://github.com/AtlaSent-Systems-Inc/atlasent-sdk"

[tool.setuptools.packages.find]
include = ["atlasent_langchain*"]

[tool.setuptools.package-data]
atlasent_langchain = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["atlasent_langchain"]

[tool.coverage.report]
fail_under = 95
